--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
         <li [class.active]="indexInfo?.isHome">
           <a routerLink="/" title="{{appInfo?.appName}}首页">首页</a>
         </li>
-        <li *ngFor="let taxonomy of postTaxonomies">
+        <li [class.active]="taxonomy.taxonomySlug === rootTaxonomy" *ngFor="let taxonomy of postTaxonomies">
           <a [routerLink]="['/post/category/'+taxonomy.taxonomySlug]"
              [title]="taxonomy.taxonomyDescription">
             <span>{{ taxonomy.taxonomyName }}</span><span *ngIf="!taxonomy.isLeaf" class="nav-arrow"></span>
