--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,9 @@
           </main>
           <app-footer></app-footer>
         </div>
-        <div *ngIf="siderVisible" class="m-mask m-mask-sider" (click)="closeSider()"></div>
+        @if (siderVisible) {
+          <div class="m-mask m-mask-sider" (click)="closeSider()"></div>
+        }
       </div>
       <app-m-sider></app-m-sider>
     }
@@ -28,11 +30,17 @@
          alt="">
   } @else {
     <!--global errors-->
-    <ng-container [ngSwitch]="errorState.code">
-      <app-forbidden *ngSwitchCase="403" [errorState]="errorState"></app-forbidden>
-      <app-not-found *ngSwitchCase="404" [errorState]="errorState"></app-not-found>
-      <app-server-error *ngSwitchDefault [errorState]="errorState"></app-server-error>
-    </ng-container>
+    @switch (errorState.code) {
+      @case (403) {
+        <app-forbidden [errorState]="errorState"></app-forbidden>
+      }
+      @case (404) {
+        <app-not-found [errorState]="errorState"></app-not-found>
+      }
+      @default {
+        <app-server-error [errorState]="errorState"></app-server-error>
+      }
+    }
   }
 } @else {
   <!--error pages-->
