--- a/src/app/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/components/breadcrumb/breadcrumb.component.html
@@ -1,25 +1,24 @@
-<div class="breadcrumb"
-     *ngIf="breadcrumbs && breadcrumbs.length > 0"
-     [class.m-breadcrumb]="isMobile"
-     [class.p-breadcrumb]="!isMobile">
-  <nz-icon nzType="environment" />
-  <ng-container *ngFor="let breadcrumb of breadcrumbs">
-    @if (breadcrumb.url !== '') {
-      @if (!breadcrumb.isHeader) {
-        <span><a [routerLink]="breadcrumb.url"
-                 [queryParams]="breadcrumb.param"
-                 [title]="breadcrumb.tooltip">{{ breadcrumb.label }}</a></span>
+@if (breadcrumbs && breadcrumbs.length > 0) {
+  <div class="breadcrumb" [class.m-breadcrumb]="isMobile" [class.p-breadcrumb]="!isMobile">
+    <nz-icon nzType="environment"/>
+    @for (breadcrumb of breadcrumbs; track breadcrumb) {
+      @if (breadcrumb.url !== '') {
+        @if (!breadcrumb.isHeader) {
+          <span><a [routerLink]="breadcrumb.url"
+                   [queryParams]="breadcrumb.param"
+                   [title]="breadcrumb.tooltip">{{ breadcrumb.label }}</a></span>
+        } @else {
+          <h3><span><a [routerLink]="breadcrumb.url"
+                       [queryParams]="breadcrumb.param"
+                       [title]="breadcrumb.tooltip">{{ breadcrumb.label }}</a></span></h3>
+        }
       } @else {
-        <h3><span><a [routerLink]="breadcrumb.url"
-                     [queryParams]="breadcrumb.param"
-                     [title]="breadcrumb.tooltip">{{ breadcrumb.label }}</a></span></h3>
-      }
-    } @else {
-      @if (!breadcrumb.isHeader) {
-        <span [title]="breadcrumb.tooltip">{{ breadcrumb.label }}</span>
-      } @else {
-        <h3 [title]="breadcrumb.tooltip">{{ breadcrumb.label }}</h3>
+        @if (!breadcrumb.isHeader) {
+          <span [title]="breadcrumb.tooltip">{{ breadcrumb.label }}</span>
+        } @else {
+          <h3 [title]="breadcrumb.tooltip">{{ breadcrumb.label }}</h3>
+        }
       }
     }
-  </ng-container>
-</div>
+  </div>
+}
