--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,9 +1,9 @@
 <app-breadcrumb></app-breadcrumb>
 @if (total > 0) {
   <div [class.post-list]="!isMobile" [class.m-post-list]="isMobile">
-    <ng-container *ngFor="let item of searchResult; let i = index">
+    @for (item of searchResult; track item; let i = $index) {
       <app-post-item [post]="item" [index]="i"></app-post-item>
-    </ng-container>
+    }
   </div>
 } @else {
   <div class="empty" [class.p-empty]="!isMobile" [class.m-empty]="isMobile">
