--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -40,6 +40,10 @@
   padding: .75rem 1rem;
 }
 
+.flex-center {
+  justify-content: center;
+}
+
 [nz-button] {
   .fi + span {
     margin-left: 8px;
